cute noise when internal beep is toggled.

--- a/Android/vSpeedVario/app/src/main/res/layout/activity_vspeedvario.xml
+++ b/Android/vSpeedVario/app/src/main/res/layout/activity_vspeedvario.xml
@@ -257,6 +257,7 @@
                 android:textSize="12sp"
                 android:textColor="#00ffff"
                 android:checked="true"
+                android:onClick="onInternalBeepClick"
                 android:gravity="center_vertical|start"/>
             <CheckBox
                 android:layout_width="match_parent"
