getting ready to attempt a thermal indicating flight path

--- a/Android/vSpeedVario/app/src/main/res/layout/activity_vspeedvario.xml
+++ b/Android/vSpeedVario/app/src/main/res/layout/activity_vspeedvario.xml
@@ -127,6 +127,22 @@
 
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:id="@+id/thermalparent"
+        android:layout_above="@+id/settings"
+        android:layout_toEndOf="@id/altitop"
+        android:layout_marginStart="5dp">
+        <TextView
+            android:visibility="invisible"
+            android:id="@+id/canvasforthermal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|end"
+            android:background="#555555"/>
+    </LinearLayout>
 
 
 
