--- a/Android/vSpeedVario/app/src/main/res/layout/activity_vspeedvario.xml
+++ b/Android/vSpeedVario/app/src/main/res/layout/activity_vspeedvario.xml
@@ -70,13 +70,13 @@
             android:background="#ffffff"
             android:text="4804"/>
         <TextView
-            android:id="@+id/splitAltitude"
+            android:id="@+id/splitAltitudeold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
             android:layout_gravity="center_vertical"
             android:textSize="54sp"
-            android:textColor="#ffffff"
+            android:textColor="#000000"
             android:background="#000000"
             android:text="4804"/>
         <!--<Button
@@ -125,7 +125,21 @@
             android:text="4805"/>
     </LinearLayout>
 
-
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_above="@id/settings">
+        <TextView
+            android:id="@+id/splitAltitude"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
+            android:layout_gravity="center_vertical"
+            android:textSize="54sp"
+            android:textColor="#ffffff"
+            android:background="#000000"
+            android:text="4804"/>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -199,7 +213,7 @@
         <LinearLayout
             android:id="@+id/externallayout"
             android:layout_width="0px"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:background="#000000"
             android:padding="5dp"
@@ -237,7 +251,7 @@
                 android:gravity="center_vertical|start"
                 android:textColor="#00ffff"
                 android:textSize="12sp"
-                android:text="BATTERY"
+                android:text="BATT: 80%"
                 android:checked="true"
                 android:id="@+id/battery"
                 android:onClick="batteryclick"/>
@@ -246,7 +260,7 @@
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="8dp"
-                android:progress="50"
+                android:progress="80"
                 android:visibility="visible"
                 android:padding="0dp" />
         </LinearLayout>
@@ -276,7 +290,7 @@
                 android:text="BEEP"
                 android:textSize="12sp"
                 android:textColor="#00ffff"
-                android:checked="true"
+                android:checked="false"
                 android:onClick="onInternalBeepClick"
                 android:gravity="center_vertical|start"/>
             <CheckBox
@@ -334,46 +348,48 @@
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
                 android:textColor="#00ffff"
-                android:text="AVERAGING:"
+                android:text="AVG: 1000 ms:"
                 android:gravity="center_horizontal"
                 android:layout_marginBottom="0dp"/>
-            <CheckBox
+            <SeekBar
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical|end"
-                android:textColor="#00ffff"
-                android:textSize="12sp"
-                android:text="1000ms"
-                android:checked="true"
-                android:id="@+id/aone"
-                android:onClick="a1000click"/>
-            <CheckBox
+                android:clickable="true"
+                android:secondaryProgress="100"
+                android:progress="100"
+                android:id="@+id/avgfilter" />
+            <TextView
+                android:id="@+id/climbtrigger"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical|end"
-                android:textColor="#00ffff"
                 android:textSize="12sp"
-                android:text="500ms"
-                android:id="@+id/ahalf"
-                android:onClick="a500click"/>
-            <CheckBox
+                android:textColor="#00ffff"
+                android:text="CLIMB: 1 ft"
+                android:gravity="center_horizontal"
+                android:layout_marginBottom="0dp"/>
+            <SeekBar
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical|end"
-                android:textColor="#00ffff"
-                android:textSize="12sp"
-                android:text="250ms"
-                android:id="@+id/aquarter"
-                android:onClick="a250click"/>
-            <CheckBox
+                android:clickable="true"
+                android:secondaryProgress="100"
+                android:progress="1"
+                android:id="@+id/ClimbThreshold" />
+            <TextView
+                android:id="@+id/sinktrigger"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical|end"
-                android:textColor="#00ffff"
                 android:textSize="12sp"
-                android:text="100ms"
-                android:id="@+id/atenth"
-                android:onClick="a100click"/>
+                android:textColor="#00ffff"
+                android:text="SINK: -1 ft/s"
+                android:gravity="center_horizontal"
+                android:layout_marginBottom="0dp"/>
+            <SeekBar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:secondaryProgress="100"
+                android:progress="100"
+                android:id="@+id/SinkThreshold" />
         </LinearLayout>
 
         <TextView
@@ -420,6 +436,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:layout_gravity="end"
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
